# cpp_design_patterns

./: LICENSE  README.md
adapter_1/: CMakeLists.txt  device.cpp  device.h  device_adapter.cpp  device_adapter.h  main.cpp  old_device.cpp  old_device.h
bridge_1/: main.cpp  text.h  text_style.h
composite_1/: main.cpp  text.h
composite_2/: CMakeLists.txt  main.cpp  text.h
